[gd_scene load_steps=5 format=3 uid="uid://jugador"]

[ext_resource type="Script" path="res://player.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://rma" path="res://gun.tscn" id="2"]

[sub_resource type="CircleShape2D" id="1"]
radius = 12.0

[sub_resource type="CircleShape2D" id="2"]
radius = 12.0

[node name="Jugador" type="CharacterBody2D"]
script = ExtResource("1")

[node name="Colision" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="ZonaGolpe" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaGolpe"]
shape = SubResource("2")

[node name="Visual" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
color = Color(0, 0, 0, 1)

[node name="BarraFondo" type="ColorRect" parent="."]
z_index = 1
offset_left = -12.0
offset_top = -24.0
offset_right = 12.0
offset_bottom = -20.0
color = Color(0.2, 0.2, 0.2, 0.4)

[node name="BarraVida" type="ColorRect" parent="BarraFondo"]
z_index = 2
layout_mode = 0
offset_right = 24.0
offset_bottom = 4.0
color = Color(0, 1, 0, 1)

[node name="Arma" parent="." instance=ExtResource("2")]
